修改部分名称

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>中南大学科学技术协会</title>
+  <title>中南大学计算机学院科协</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-<meta name="description" content="中南大学科学技术协会官网" />
-<meta property="og:title" content="中南大学科学技术协会" />
+<meta name="description" content="中南大学计算机学院科协官网" />
+<meta property="og:title" content="中南大学计算机学院科协" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://uast-cse-csu.github.io" />
 <meta property="og:image" content="images/logoWithText.jpg" />
-<meta property="og:description" content="中南大学科学技术协会官网" />
+<meta property="og:description" content="中南大学计算机学院科协官网" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="" />
 <meta name="twitter:creator" content="" />
@@ -133,7 +133,7 @@
   <div class="container">
     <div class="row justify-content-start">
       <div class="col-12 col-md-7 col-lg-6 order-2 order-md-1">
-        <h1 id="中南大学科学技术协会">中南大学科学技术协会</h1>
+        <h1 id="中南大学计算机学院科协">中南大学计算机学院科协</h1>
 <h2 id="association-for-science-and-techology-of-csu">Association for Science and Techology of CSU</h2>
 
         <div class="call">
@@ -303,7 +303,7 @@
     <div class="row">
       <div class="col-12">
         <div class="footer-inner">
-          <h3 class="footer-title">中南大学科学技术协会版权所有</h3>
+          <h3 class="footer-title">中南大学计算机学院科协版权所有</h3>
           <ul>
             
             
